--- a/index.html
+++ b/index.html
@@ -2,8 +2,43 @@
 <html>
 <head>
     <title>theshoeswala</title>
+    <link rel="stylesheet" href="./css/style.css"/>
+    <link rel="stylesheet" href="./css/index.css"/>
+
 </head>
 <body>
-    <h1>theshoeswala</h1>
+    <h1 class="main-heading">theshoeswala</h1>
+     <div class="menu-bar">
+    <img src="./icons/home.png" class="main-icon"/>
+    <a href="./pages/about.html" class="menu">About</a>
+    <a href="./pages/contact.html" class="menu">Contact Us</a>
+</div>
+<img src="./images/main_img.jpg" class="main-img"/>
+<h2 class="second-heading">Order Now</h2>
+<div class="parent">
+<div class="product-card">
+    <img src="./images/shoes1_img.webp" class="product-img"/>
+    <h2 class="product-title">Campus Men's Artemis Running Shoes</h2>
+    <p class="product-price"><b>Price</b><del>Rs.1,347.00</del>Rs.1,000.00</p>
+    <b class="d1">Free delivery</b><br/><br/>
+    <button class="buy-now">Buy Now</button>
+</div>
+<div class="product-card">
+    <img src="./images/shoes2_img.webp" class="product-img"/>
+    <h2 class="product-title">Women Off White Lace-Up Running Shoes</h2>
+    <p class="product-price"><b>Price</b><del>Rs.1,367.00</del>Rs.1,500.00</p>
+    <b class="d1">Free delivery</b><br/><br/>
+    <button class="buy-now">Buy Now</button>
+</div>
+<div class="product-card">
+    <img src="./images/shoes3_img.webp" class="product-img"/>
+    <h2 class="product-title">SHUTTLE Blue Men's Walking Shoes Blue/8</h2>
+    <p class="product-price"><b>Price</b><del>Rs.1,000.00</del>Rs.912.00</p>
+    <b class="d1">Free delivery</b><br/><br/>
+    <button class="buy-now">Buy Now</button>
+</div>
+</div>
+</body>
+</html>
 </body>
 </html>
